fixed fontsize of headers on mobile

--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,9 @@ content a:visited {
 
 
 /************* MENU ************/
-h1 {font-size: 2em;}
-h2 {font-size: 1.3em;}
-h3 {font-size: 1em;}
+h1 {font-size: 32px;}
+h2 {font-size: 21px;}
+h3 {font-size: 16px;}
 
 h1, h2, h3 {
     margin-top: .5em;
